Position and Size is now remembered

--- a/SeriesSelector/SeriesSelector.csproj
+++ b/SeriesSelector/SeriesSelector.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="RegistryStuf.cs" />
     <Compile Include="Series.cs" />
     <Compile Include="SeriesViewModel.cs" />
     <Page Include="MainWindow.xaml">
