--- a/SeriesSelector/SeriesSelector.csproj
+++ b/SeriesSelector/SeriesSelector.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Clock.cs" />
     <Compile Include="PersistenceMaster.cs" />
     <Compile Include="PositionMaster.cs" />
     <Compile Include="Properties\Annotations.cs" />
