--- a/SeriesSelector/SeriesSelector.csproj
+++ b/SeriesSelector/SeriesSelector.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Clock.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FileListCache.cs" />
+    <Compile Include="IndexedEpisode.cs" />
     <Compile Include="Series.cs" />
     <Compile Include="UsageEnvironments.cs" />
     <Compile Include="PersistenceMaster.cs" />
